--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-  --primary-color: #1693c5;
-  --secondary-color: #7adef7;
-  --tertiary-color: #f18943;
+  --primary-color: #008aaa;
+  --secondary-color: #3bbadb;
+  --tertiary-color: #d1884f;
 }
 
 * {
